# fuzzy-waffle-ocr

./: AI_INTEGRATION_ROADMAP.md  FUTURE_FEATURES.md  INSTALLATION.md  MANIFEST.in  PROJECT_STATUS.md  README.md  REPO_DESCRIPTION.md  USER_JOURNEY.md  erpnext_ocr_spec.md  install.py  pyproject.toml  requirements.txt  setup.py
fuzzy_waffle_ocr/: __init__.py  hooks.py  requirements.txt  setup.py
fuzzy_waffle_ocr/ai_integration/: chatbot_assistant.py  chatgpt_processor.py
fuzzy_waffle_ocr/api/: manual_notes.py
fuzzy_waffle_ocr/doctype/extracted_items/: extracted_items.py
fuzzy_waffle_ocr/doctype/invoice_ocr_processor/: invoice_ocr_processor.py
fuzzy_waffle_ocr/doctype/ocr_notes/: ocr_notes.py
fuzzy_waffle_ocr/doctype/supplier_item_mapping/: supplier_item_mapping.json
fuzzy_waffle_ocr/fuzzy_waffle_ocr/config/: docs.py
fuzzy_waffle_ocr/fuzzy_waffle_ocr/doctype/chat_history/: chat_history.json  chat_history.py
fuzzy_waffle_ocr/fuzzy_waffle_ocr/doctype/extracted_items/: extracted_items.json
fuzzy_waffle_ocr/fuzzy_waffle_ocr/doctype/invoice_ocr_processor/: invoice_ocr_processor.json
fuzzy_waffle_ocr/fuzzy_waffle_ocr/doctype/ocr_notes/: __init__.py  ocr_notes.json
fuzzy_waffle_ocr/fuzzy_waffle_ocr/doctype/ocr_settings/: ocr_settings.json  ocr_settings.py
fuzzy_waffle_ocr/fuzzy_waffle_ocr/learning/: comprehensive_learning.py
fuzzy_waffle_ocr/fuzzy_waffle_ocr/ocr/: processor.py
fuzzy_waffle_ocr/learning/: expense_head_learning.py
fuzzy_waffle_ocr/ocr/: processor.py
fuzzy_waffle_ocr/public/js/: chatbot_widget.js
(+1 files in other folders)
